--- a/styles/syle.css
+++ b/styles/syle.css
@@ -29,7 +29,8 @@ body {
 h2 {
     font-family: 'Roboto Mono', monospace;
     font-size: var(--lg);
-    margin-bottom: 5vh;
+    margin-bottom: 4vh;
+    margin-top: 1vh;
 }
 h3 {
     font-family: 'Roboto Mono', monospace;
@@ -50,6 +51,7 @@ h3 {
             border-radius: 50%;
             width: 30vw;
             transition: 0.2s;
+            box-shadow: 5px 1px 10px var(--shadow-box);
         }
         #profile-img:hover {
             width: 34vw;
@@ -63,6 +65,7 @@ h3 {
             display: flex;
             align-items: center;
             flex-direction: column;
+            padding-bottom: 1vh;
         }
             .boton-links {
                 display: flex;
