--- a/styles/syle.css
+++ b/styles/syle.css
@@ -96,6 +96,7 @@ a {
               }
         .link-education .links {
             color: var(--headline);
+            font-size: var(--md);
         }
         .link-education .links:hover {
             color: var(--button-hover);
