--- a/styles/syle.css
+++ b/styles/syle.css
@@ -117,6 +117,10 @@ a {
         display: flex;
         align-items: center;
     }
+    .social-media-logo-6 {
+        width: 38px;
+        border-radius: 50%;
+    }
 
 @media screen and (min-width:700px){
     #profile-img {
